--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,26 +29,10 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
-      - default
-
-  # frontend:
-  #   build:
-  #     context: ./ui
-  #     dockerfile: ./Dockerfile
-  #   image: docker.pkg.github.com/stegzilla/plexfetch/frontend
-  #   container_name: frontend
-  #   networks:
-  #     - default
-  #   depends_on:
-  #     - backend
-  #   labels:
-  #     - "traefik.http.routers.frontend.rule=Host(`plexfetch.stegzilla.com`) && PathPrefix(`/`)"
-  #     - "traefik.http.routers.frontend.tls=true"
-  #     - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
-  #     - "traefik.http.routers.frontend.middlewares=https-redirect@docker"
+      - todanni
 
 volumes:
   postgres-data:
 
 networks:
-  default:
+  todanni:
