refactor: rename network again

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - ./acme-store:/etc/traefik/acme
     labels:
       - "traefik.http.middlewares.https-redirect.redirectscheme.scheme=https"
+    networks: todanni
 
   postgresql:
     image: postgres
@@ -36,3 +37,4 @@ volumes:
 
 networks:
   todanni:
+    name: todanni
