--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,13 @@ services:
     environment:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=test
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
       - todanni
+    ports:
+      - "5432:5432"
 
 volumes:
   postgres-data:
