--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       --providers.docker
       --entrypoints.web.address=:80
       --entrypoints.websecure.address=:443
+      --entrypoints.web.http.redirections.entryPoint.to=websecure
+      --entrypoints.web.http.redirections.entryPoint.scheme=https
       --certificatesresolvers.letsencrypt.acme.email=dannii.popova@gmail.com
       --certificatesresolvers.letsencrypt.acme.storage=acme.json
       --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
@@ -17,8 +19,6 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./acme-store:/etc/traefik/acme
-    labels:
-      - "traefik.http.middlewares.https-redirect.redirectscheme.scheme=https"
     networks:
       - todanni
 
@@ -28,13 +28,27 @@ services:
     environment:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=docker
-      - POSTGRES_DB=test
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
       - todanni
     ports:
       - "5432:5432"
+
+  vault: 
+    image: vault
+    container_name: vault
+    ports: 
+      - "8200:8200"
+    volumes:
+      - ./file:/vault/file:rw
+      - ./config:/vault/config:rw
+    cap_add:
+      - IPC_LOCK
+    networks:
+      - todanni
+    command: vault server -config=/vault/config/vault.json
+
 
 volumes:
   postgres-data:
