--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,9 +45,9 @@ services:
       - todanni
     command: vault server -config=/vault/config/vault.json
     labels: 
-      - HOST_LABEL: traefik.http.routers.vault.rule=Host(`dev-vault.todanni.com`) && PathPrefix(`/`)
-      - TLS_LABEL: traefik.http.routers.vault.tls=true
-      - CERT_LABEL: traefik.http.routers.vault.tls.certresolver=letsencrypt
+      - traefik.http.routers.vault.rule=Host(`dev-vault.todanni.com`) && PathPrefix(`/`)
+      - traefik.http.routers.vault.tls=true
+      - traefik.http.routers.vault.tls.certresolver=letsencrypt
 
 volumes:
   postgres-data:
