--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       - todanni
     command: vault server -config=/vault/config/vault.json
     labels: 
-      - traefik.http.routers.vault.rule=Host(`dev-vault.todanni.com`) && PathPrefix(`/`)
+      - traefik.http.routers.vault.rule=Host(`dev-vault.todanni.com`)
       - traefik.http.routers.vault.tls=true
       - traefik.http.routers.vault.tls.certresolver=letsencrypt
 
