fix(traefik): actually use the acme store

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       --entrypoints.web.http.redirections.entryPoint.to=websecure
       --entrypoints.web.http.redirections.entryPoint.scheme=https
       --certificatesresolvers.letsencrypt.acme.email=dannii.popova@gmail.com
-      --certificatesresolvers.letsencrypt.acme.storage=acme.json
+      --certificatesresolvers.letsencrypt.acme.storage=/etc/traefik/acme/acme.json
       --certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web
     ports:
       - "80:80"
