fix: change entrypoint name for vault

--- a/traefik/vault.yml
+++ b/traefik/vault.yml
@@ -2,7 +2,7 @@ http:
   routers:
    vault:
     entrypoints:
-      - "https"
+      - "websecure"
     rule: "Host(`vault.todanni.com`)"
     tls:
      certresolver: letsencrypt
