feat: add rabbitmq to setup

--- a/local-docker-compose.yml
+++ b/local-docker-compose.yml
@@ -41,6 +41,19 @@ services:
       - "8200:8200"
     command: vault server -config=/vault/config/vault.json
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    environment:
+      - RABBITMQ_DEFAULT_USER=docker
+      - RABBITMQ_DEFAULT_PASS=docker
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+      - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+    networks:
+        - todanni
 
 volumes:
   postgres-data:
