--- a/dev-docker-compose.yml
+++ b/dev-docker-compose.yml
@@ -50,7 +50,15 @@ services:
       - traefik.http.routers.vault.rule=Host(`dev-vault.todanni.com`)
       - traefik.http.routers.vault.tls=true
       - traefik.http.routers.vault.tls.certresolver=letsencrypt
-      - traefik.http.middlewares.test-ipwhitelist.ipwhitelist.sourcerange=172.21.0.0/16
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: 'rabbitmq'
+    volumes:
+      - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+      - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+    networks:
+      - todanni
 
 volumes:
   postgres-data:
