feat: duplicate for prod

--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -1,63 +1,10 @@
-name: Development - re-deploy
+name: Production - re-deploy
 
 on:
-  release:
-    types: [published]
+  push:
+    branches: [ main ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./build/Dockerfile
-          push: true
-          tags: ${{ github.repository }}:latest
-          platforms: linux/amd64
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
-
-      ## Send result to discord
-      -
-        name: Send discord failure message
-        if: ${{ failure() }}
-        uses: appleboy/discord-action@master
-        with:
-          webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-          webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-          color: "#cd1a2b"
-          message: "Failed to build Dev Images for ${{ github.repository }} \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
-
-      -
-        name: Send discord success message
-        if: ${{ success() }}
-        uses: appleboy/discord-action@master
-        with:
-          webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-          webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-          color: "#48f442"
-          message: "Dev Images built for ${{ github.repository }}. \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
-
-      ## Send result to discord
   run:
     runs-on: ubuntu-latest
     needs: [build]
@@ -65,13 +12,25 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+      -
+        name: copy repo contents via ssh password
+        uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.DEV_DO_DROPLET_IP }}
+          host: ${{ secrets.PROD_HOSTNAME}}
+          key: ${{ secrets.ADMIN_SSH_KEY }}
+          source: "*"
+          target: "/root/todanni/orchestrate"
+          overwrite: true
+      -
+        name: Run
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.PROD_DO_DROPLET_IP }}
           username: root
           key: ${{ secrets.ADMIN_SSH_KEY }}
           script: |
-            docker-compose --file dev-docker-compose.yml down
-            docker-compose --file dev-docker-compose.yml up -d
+            docker-compose --file prod-docker-compose.yml down
+            docker-compose --file prod-docker-compose.yml up -d
       -
         name: Send discord failure message
         if: ${{ failure() }}
@@ -80,7 +39,7 @@ jobs:
           webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
           webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
           color: "#FF0000"
-          message: "Failed to run Dev images for ${{ github.repository }} \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
+          message: "Failed to run prod images for ${{ github.repository }} \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
 
       -
         name: Send discord success message
@@ -90,5 +49,5 @@ jobs:
           webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
           webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
           color: "#48f442"
-          message: "Dev is now running latest images for ${{ github.repository }}. \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
+          message: Prod is now running latest images for ${{ github.repository }}. \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
 
