--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -5,59 +5,6 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./build/Dockerfile
-          push: true
-          tags: ${{ github.repository }}:latest
-          platforms: linux/amd64
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
-
-      ## Send result to discord
-      -
-        name: Send discord failure message
-        if: ${{ failure() }}
-        uses: appleboy/discord-action@master
-        with:
-          webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-          webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-          color: "#cd1a2b"
-          message: "Failed to build Dev Images for ${{ github.repository }} \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
-
-      -
-        name: Send discord success message
-        if: ${{ success() }}
-        uses: appleboy/discord-action@master
-        with:
-          webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
-          webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-          color: "#48f442"
-          message: "Dev Images built for ${{ github.repository }}. \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
-
-      ## Send result to discord
   run:
     runs-on: ubuntu-latest
     needs: [build]
@@ -65,6 +12,18 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+      -
+        name: copy repo contents via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.DEV_HOSTNAME}}
+          key: ${{ secrets.ADMIN_SSH_KEY }}
+          source: "*"
+          target: "/root/todanni/orchestrate"
+          overwrite: true
+      -
+        name: Run
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DEV_DO_DROPLET_IP }}
           username: root
