--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -16,6 +16,7 @@ jobs:
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.DEV_HOSTNAME}}
+          username: root
           key: ${{ secrets.ADMIN_SSH_KEY }}
           source: "*"
           target: "/root/todanni/orchestrate"
