update deploy jobs

--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -30,8 +30,8 @@ jobs:
           key: ${{ secrets.ADMIN_SSH_KEY }}
           script: |
             cd /root/todanni/orchestrate/
-            docker-compose --file dev-docker-compose.yml down
-            docker-compose --file dev-docker-compose.yml up -d
+            docker-compose --file docker-compose.yml down
+            docker-compose --file docker-compose.yml up -d
       -
         name: Send discord failure message
         if: ${{ failure() }}
@@ -40,7 +40,7 @@ jobs:
           webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
           webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
           color: "#FF0000"
-          message: "Failed to run Dev images for ${{ github.repository }} \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
+          message: "Failed to run images for ${{ github.repository }} \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
 
       -
         name: Send discord success message
@@ -50,5 +50,4 @@ jobs:
           webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
           webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
           color: "#48f442"
-          message: "Dev is now running latest images for ${{ github.repository }}. \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
-
+          message: "Droplet is now running latest images for ${{ github.repository }}. \n https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id}}"
