--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,20 +53,22 @@ services:
     ports:
       - "127.0.0.1:5432:5432"
 
-    datadog:
-      image: datadog/agent:latest
-      environment:
-        - DD_API_KEY=${DD_API_KEY}
-        - DD_SITE=datadoghq.com
-        - DD_LOGS_ENABLED=true
-        - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
-        - DD_CONTAINER_EXCLUDE_LOGS="name:datadog-agent"
-        - DD_SITE="datadoghq.eu"
-      volumes:
-        - /var/run/docker.sock:/var/run/docker.sock:ro
-        - /proc/:/host/proc/:ro
-        - /opt/datadog-agent/run:/opt/datadog-agent/run:rw
-        - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
+  datadog:
+    image: datadog/agent:latest
+    environment:
+      - DD_API_KEY=${DD_API_KEY}
+      - DD_SITE=datadoghq.com
+      - DD_LOGS_ENABLED=true
+      - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
+      - DD_CONTAINER_EXCLUDE_LOGS="name:datadog-agent"
+      - DD_SITE="datadoghq.eu"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /proc/:/host/proc/:ro
+      - /opt/datadog-agent/run:/opt/datadog-agent/run:rw
+      - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
+    networks:
+      todanni:
 
 volumes:
   postgres-data:
