--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   traefik:
     image: traefik:v2.4
+    container_name: traefik
     command: --api.insecure=true
       --accesslog=true
       --providers.docker
@@ -57,12 +58,13 @@ services:
 
   datadog:
     image: datadog/agent:latest
+    container_name: datadog
     environment:
       - DD_API_KEY=${DD_API_KEY}
       - DD_SITE=datadoghq.eu
       - DD_LOGS_ENABLED=true
       - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
-      - DD_CONTAINER_EXCLUDE_LOGS="name:datadog-agent"
+      - DD_CONTAINER_EXCLUDE_LOGS="name:datadog"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /proc/:/host/proc/:ro
